// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sidebar /> should render properly closed 1`] = `
.emotion-0 {
  width: 240px;
  position: fixed;
  height: calc(100% - 44px);
  overflow-y: auto;
  z-index: 90;
  background-color: #4a4a4a;
  -webkit-transition: left ease-in-out .3s,visibility ease-in-out .3s;
  transition: left ease-in-out .3s,visibility ease-in-out .3s;
  overscroll-behavior: contain;
  left: -240px;
  top: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-2 {
  border-bottom: 1px solid transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px;
  font-size: 15px;
  line-height: 19px;
  background-color: none;
  color: #b3b3b3;
}

.emotion-3 svg {
  margin-right: 12px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px;
  font-size: 15px;
  line-height: 19px;
  background-color: #2e2e2e;
  color: #6088FE;
}

.emotion-7 svg {
  margin-right: 12px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-10 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

.emotion-17 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #3b3b3b;
}

.emotion-22 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 80;
  background-color: #000000;
  opacity: 0;
  width: 0;
  -webkit-transition: opacity ease-in-out .3s,width ease-in 0s .3s;
  transition: opacity ease-in-out .3s,width ease-in 0s .3s;
}

<div>
  <nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="dashboard.svg"
            height={20}
          />
          Project Dashboard
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="datasources.svg"
            height={20}
          />
          Data Sources
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="jobQueue.svg"
            height={20}
          />
          Job Queue
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="models.svg"
            height={20}
          />
          Custom Models
          <span
            className="emotion-10"
          >
            beta
          </span>
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="visualizer.svg"
            height={20}
          />
          Visualizer
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="key.svg"
            height={20}
          />
          API Keys
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="users.svg"
            height={20}
          />
          User Admin
        </a>
      </li>
    </ul>
    <ul
      className="emotion-17"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="dashboard.svg"
            height={20}
          />
          Account Overview
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/account"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="gear.svg"
            height={20}
          />
          Account
        </a>
      </li>
    </ul>
  </nav>
  <div
    aria-label="Close Sidebar Menu"
    className="emotion-22"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;

exports[`<Sidebar /> should render properly opened 1`] = `
.emotion-0 {
  width: 240px;
  position: fixed;
  height: calc(100% - 44px);
  overflow-y: auto;
  z-index: 90;
  background-color: #4a4a4a;
  -webkit-transition: left ease-in-out .3s,visibility ease-in-out .3s;
  transition: left ease-in-out .3s,visibility ease-in-out .3s;
  overscroll-behavior: contain;
  left: 0;
  top: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-1 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 12px;
}

.emotion-2 {
  border-bottom: 1px solid transparent;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px;
  font-size: 15px;
  line-height: 19px;
  background-color: none;
  color: #b3b3b3;
}

.emotion-3 svg {
  margin-right: 12px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px;
  font-size: 15px;
  line-height: 19px;
  background-color: #2e2e2e;
  color: #6088FE;
}

.emotion-7 svg {
  margin-right: 12px;
}

.emotion-7:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
  background-color: #2e2e2e;
}

.emotion-10 {
  color: #ffffff;
  background-color: #d6680b;
  border-radius: 32px;
  font-size: 11px;
  line-height: 15px;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 0.2px;
  padding: 1px;
  padding-left: 6px;
  padding-right: 6px;
  margin-left: 8px;
}

.emotion-17 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #3b3b3b;
}

.emotion-22 {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 80;
  background-color: #000000;
  opacity: 0.5;
  width: 100%;
  -webkit-transition: opacity ease-in-out .3s,width ease-in 0s 0s;
  transition: opacity ease-in-out .3s,width ease-in 0s 0s;
}

<div>
  <nav
    className="emotion-0"
  >
    <ul
      className="emotion-1"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="dashboard.svg"
            height={20}
          />
          Project Dashboard
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/data-sources"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="datasources.svg"
            height={20}
          />
          Data Sources
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-7"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="jobQueue.svg"
            height={20}
          />
          Job Queue
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/models"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="models.svg"
            height={20}
          />
          Custom Models
          <span
            className="emotion-10"
          >
            beta
          </span>
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="visualizer.svg"
            height={20}
          />
          Visualizer
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/api-keys"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="key.svg"
            height={20}
          />
          API Keys
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="users.svg"
            height={20}
          />
          User Admin
        </a>
      </li>
    </ul>
    <ul
      className="emotion-17"
    >
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="dashboard.svg"
            height={20}
          />
          Account Overview
        </a>
      </li>
      <li
        className="emotion-2"
      >
        <a
          className="emotion-3"
          href="/account"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            data-file-name="gear.svg"
            height={20}
          />
          Account
        </a>
      </li>
    </ul>
  </nav>
  <div
    aria-label="Close Sidebar Menu"
    className="emotion-22"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="-1"
  />
</div>
`;
